// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/image/demo/basic.md correctly 1`] = `
<div
  class="ant-image"
  style="width:200px"
>
  <img
    class="ant-image-img"
    src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
  />
  <div
    class="ant-image-mask"
  >
    <div
      class="ant-image-mask-info"
    >
      <span
        aria-label="eye"
        class="anticon anticon-eye"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="eye"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
          />
        </svg>
      </span>
      Preview
    </div>
  </div>
</div>
`;

exports[`renders ./components/image/demo/fallback.md correctly 1`] = `
<div
  class="ant-image"
  style="width:200px;height:200px"
>
  <img
    class="ant-image-img"
    src="error"
    style="height:200px"
  />
  <div
    class="ant-image-mask"
  >
    <div
      class="ant-image-mask-info"
    >
      <span
        aria-label="eye"
        class="anticon anticon-eye"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="eye"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
          />
        </svg>
      </span>
      Preview
    </div>
  </div>
</div>
`;

exports[`renders ./components/image/demo/placeholder.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:12px"
  >
    <div
      class="ant-image"
      style="width:200px"
    >
      <img
        class="ant-image-img"
        src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?undefined"
      />
      <div
        aria-hidden="true"
        class="ant-image-placeholder"
      >
        <div
          class="ant-image"
          style="width:200px"
        >
          <img
            class="ant-image-img"
            src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?x-oss-process=image/blur,r_50,s_50/quality,q_1/resize,m_mfit,h_200,w_200"
          />
        </div>
      </div>
      <div
        class="ant-image-mask"
      >
        <div
          class="ant-image-mask-info"
        >
          <span
            aria-label="eye"
            class="anticon anticon-eye"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="eye"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
              />
            </svg>
          </span>
          Preview
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Reload
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/image/demo/preview-mask.md correctly 1`] = `
<div
  class="ant-image"
  style="width:96px"
>
  <img
    class="ant-image-img"
    src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
  />
  <div
    class="ant-image-mask customize-mask"
  >
    <div
      class="ant-space ant-space-vertical ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-bottom:8px"
      >
        <span
          aria-label="zoom-in"
          class="anticon anticon-zoom-in"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="zoom-in"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M637 443H519V309c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v134H325c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h118v134c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V519h118c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zm284 424L775 721c122.1-148.9 113.6-369.5-26-509-148-148.1-388.4-148.1-537 0-148.1 148.6-148.1 389 0 537 139.5 139.6 360.1 148.1 509 26l146 146c3.2 2.8 8.3 2.8 11 0l43-43c2.8-2.7 2.8-7.8 0-11zM696 696c-118.8 118.7-311.2 118.7-430 0-118.7-118.8-118.7-311.2 0-430 118.8-118.7 311.2-118.7 430 0 118.7 118.8 118.7 311.2 0 430z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        示例
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/image/demo/previewGroup.md correctly 1`] = `
Array [
  <div
    class="ant-image"
    style="width:200px"
  >
    <img
      class="ant-image-img"
      src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
    />
    <div
      class="ant-image-mask"
    >
      <div
        class="ant-image-mask-info"
      >
        <span
          aria-label="eye"
          class="anticon anticon-eye"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="eye"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
            />
          </svg>
        </span>
        Preview
      </div>
    </div>
  </div>,
  <div
    class="ant-image"
    style="width:200px"
  >
    <img
      class="ant-image-img"
      src="https://gw.alipayobjects.com/zos/antfincdn/aPkFc8Sj7n/method-draw-image.svg"
    />
    <div
      class="ant-image-mask"
    >
      <div
        class="ant-image-mask-info"
      >
        <span
          aria-label="eye"
          class="anticon anticon-eye"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="eye"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
            />
          </svg>
        </span>
        Preview
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/image/demo/previewSrc.md correctly 1`] = `
<div
  class="ant-image"
  style="width:200px"
>
  <img
    class="ant-image-img"
    src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?x-oss-process=image/blur,r_50,s_50/quality,q_1/resize,m_mfit,h_200,w_200"
  />
  <div
    class="ant-image-mask"
  >
    <div
      class="ant-image-mask-info"
    >
      <span
        aria-label="eye"
        class="anticon anticon-eye"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="eye"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
          />
        </svg>
      </span>
      Preview
    </div>
  </div>
</div>
`;
